--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,5 @@
 environment:
   matrix:
-    - nodejs_version: "0.12"
-    - nodejs_version: "1.8"
-    - nodejs_version: "2.5"
-    - nodejs_version: "3.3"
-    - nodejs_version: "4.8"
-    - nodejs_version: "5.12"
     - nodejs_version: "6.10"
     - nodejs_version: "7.6"
 cache:
@@ -20,5 +14,7 @@ build: off
 test_script:
   - node --version
   - npm --version
-  - npm run test
+  - ng build
+  - ng test --single-run --no-progress --code-coverage
+  - ng lint
 version: "{build}"
