--- a/travis.yml
+++ b/travis.yml
@@ -26,5 +26,11 @@ before_install:
   # Update Node.js modules
   - "test ! -d node_modules || npm prune"
   - "test ! -d node_modules || npm rebuild"
-script: "npm run-script test"
+
+  # Install angular-cli
+  - npm install -g angular-cli
+script:
+  - "ng build" 
+  - "ng test --single-run --no-progress --code-coverage"
+  - "ng lint"
 after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
