--- a/package.json
+++ b/package.json
@@ -6,35 +6,38 @@
     "type": "git",
     "url": "https://github.com/richard-martens/materials.git"
   },
+  "engines": {
+    "node": ">= 6.10"
+  },
   "scripts": {
+    "copy": "node tools/copy-package.js",
+    "prebundle": "rimraf dist",
+    "bundle": "rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js",
     "ng": "ng",
-    "build": "ng build",
+    "prebuild": "npm run bundle",
+    "build": "tsc & ngc",
+    "postbuild": "node tools/removecode.js & npm run copy",
+    "publish": "cd ./dist && npm publish",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^5.1.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/http": "^5.1.3",
-    "@angular/platform-browser": "^5.1.3",
-    "@angular/platform-browser-dynamic": "^5.1.3",
-    "@angular/router": "^5.1.3",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.19"
+    "@angular/core": "^5.1.3"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
+    "@angular/common": "^5.1.3",
+    "@angular/compiler": "^5.1.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
+    "@angular/platform-browser": "^5.1.3",
+    "@angular/platform-browser-dynamic": "^5.1.3",
     "@types/jasmine": "2.8.3",
     "@types/node": "~8.5.5",
     "codelyzer": "~4.0.2",
+    "del": "^3.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -43,7 +46,12 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.7.2",
     "protractor": "~5.2.2",
+    "rollup-plugin-angular": "^0.5.3",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-typescript": "^0.8.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.8.0",
     "typescript": "^2.5.3"
