--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/core": "^5.1.3"
+    "@angular/core": "^5.1.3",
+    "@angular/common": "^5.1.3"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
-    "@angular/common": "^5.1.3",
     "@angular/compiler": "^5.1.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
