--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.7.2",
     "protractor": "~5.2.2",
+    "rollup": "^0.54.0",
     "rollup-plugin-angular": "^0.5.3",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
