--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/core": "^5.1.3",
-    "@angular/common": "^5.1.3"
+    "@angular-devkit/schematics": "0.0.46",
+    "@angular/common": "^5.1.3",
+    "@angular/core": "^5.1.3"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "1.6.4",
     "@angular/compiler": "^5.1.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
     "@angular/platform-browser": "^5.1.3",
     "@angular/platform-browser-dynamic": "^5.1.3",
-    "@types/jasmine": "2.8.3",
-    "@types/node": "~8.5.5",
+    "@types/jasmine": "2.8.4",
+    "@types/node": "~9.3.0",
     "codelyzer": "~4.0.2",
     "del": "^3.0.0",
     "jasmine-core": "~2.8.0",
@@ -55,7 +56,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-typescript": "^0.8.1",
     "ts-node": "~4.1.0",
-    "tslint": "~5.8.0",
+    "tslint": "~5.9.1",
     "typescript": "^2.5.3"
   }
 }
