--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@angular-devkit/schematics": "0.0.46",
     "@angular/common": "^5.1.3",
-    "@angular/core": "^5.1.3"
+    "@angular/core": "^5.1.3",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.4",
